button issue testing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@ html, body {
     padding: 0;
     border: none;
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 body {
-    background-color: black;
+    background-color: pink;
     color: white;
     font-family: 'Montserrat', Arial, sans-serif;
 }
